# technical-test-backend-reda

./: .gitignore  README.md  docker-compose.yaml  init.sql
python-api/: Dockerfile  config.toml  pyproject.toml
python-api/app/: config.py  db.py  main.py  models.py  routes.py  tasks.py
python-api/app/config/: config.py
python-api/app/db/: models.py  queries.py  session.py
python-api/app/router/: models.py  router.py  routes_prices.py
python-api/app/schemas/: error.py  prices.py
python-api/app/services/: average_service.py
python-api/app/tasks/: celery_app.py  prices_tasks.py
rust-api/: Cargo.toml  Config.toml  Dockerfile
rust-api/src/: main.rs
rust-api/src/config/: loader.rs  mod.rs
rust-api/src/docs/: mod.rs  swagger.rs
rust-api/src/errors/: api_error.rs  mod.rs
rust-api/src/models/: daily_average.rs  mod.rs  python_api.rs  query.rs
rust-api/src/routes/: mod.rs  prices.rs
rust-api/src/services/: mod.rs  python_client.rs
rust-api/src/utils/: date_validation.rs  mod.rs
