[project]
name = "python-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "SQLAlchemy>=2",
    "psycopg2-binary",
    "celery[redis]",
    "tomli"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
