[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.15.19"
thiserror = "2.0.17"
env_logger = "0.11"
log = "0.4"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }