[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.14"
thiserror = "1"
env_logger = "0.11"
log = "0.4"
utoipa = { version = "4", features = ["actix_extras"] }
// NOTE: recherche sur doc en ligne, qui sont peut etre plus anciennes
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
// REVIEW: les versions sont pas à jour, mettre X.Y.Z sinon c'est pas fixé ça évolue tout seul
// NOTE: copié collé de la ligne au lieu de cargo add